--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "copy-to-clipboard": "^3.3.2",
     "ethers": "5.5.3",
     "react": "17.0.2",
+    "react-darkreader": "^1.5.6",
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
