--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "copy-to-clipboard": "^3.3.2",
     "ethers": "5.5.3",
     "react": "17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
@@ -34,7 +35,7 @@
     "transpile-abi": "node scripts/buildAbiAndContractNameFiles.js run",
     "transpile-bytecode": "node scripts/buildBytecodeFiles.js run",
     "transpile-all": "node scripts/buildOnStart.js startRun",
-    "ii": "rm -rf node_modules hardhat-env/node_modules alicenet/bridge/node_modules alicenet/bridge/artifacts && npm i && cd hardhat-env && npm i && cd ../alicenet && ./scripts/main.sh init 4",
+    "ii": "rm -rf node_modules hardhat-env/node_modules alicenet/bridge/node_modules alicenet/bridge/artifacts && npm i && cd hardhat-env && npm i && cd ../alicenet && ./scripts/main.sh clean && ./scripts/main.sh init 4",
     "hh-env": "cd hardhat-env && npx hardhat node",
     "hh-compile": "cd ./alicenet/bridge && npm run compile",
     "hh-prep": "sed -i 's/NETWORK=${1:-\"dev\"}/NETWORK=${1:-\"localhost\"}/g' alicenet/scripts/base-scripts/deploy.sh & sed -i 's/legacyToken_ = \"0x546f99f244b7b58b855330ae0e2bc1b30b41302f\"/legacyToken_ = \"0x5B09A0371C1DA44A8E24D36Bf5DEb1141a84d875\"/g' alicenet/scripts/base-files/deploymentArgsTemplate",
