--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
     "redux-thunk": "2.4.1",
+    "sass": "^1.54.5",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "2.0.4",
     "web-vitals": "2.1.3"
