--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
+    "alice-semantic-css": "git+https://github.com/alicenet/alice-semantic-css.git",
     "copy-to-clipboard": "^3.3.2",
     "ethers": "5.5.3",
     "react": "17.0.2",
