--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,7 @@
     REACT_APP__AToken_CONTRACT_ADDRESS="0x4426F1939966427C436c565a4532e41028c60301"
     REACT_APP__PublicStaking_CONTRACT_ADDRESS="0x0F27E1c790d776CE13eF852623E2Bc6AcE1b9d4B"
     REACT_APP__Factory_CONTRACT_ADDRESS="0x0b1F9c2b7bED6Db83295c7B5158E3806d67eC5bc"
+    REACT_APP__ENV="0x0b1F9c2b7bED6Db83295c7B5158E3806d67eC5bc"
+    REACT_APP__ETHEREUM_ENDPOINT_LOCAL="http://localhost:8545"
+    REACT_APP__ETHEREUM_ENDPOINT_STAGING="https://hh.staging.alice.net"
+    REACT_APP__ETHEREUM_ENDPOINT_PRODUCTION="https://eth.alice.net"
