--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
     "alice-semantic-css": "git+https://github.com/alicenet/alice-semantic-css.git",
-    "copy-to-clipboard": "^3.3.2",
+    "copy-to-clipboard": "3.3.2",
     "ethers": "5.5.3",
     "react": "17.0.2",
-    "react-cookie": "^4.1.1",
+    "react-cookie": "4.1.1",
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
-    "react-toastify": "^9.0.8",
+    "react-toastify": "9.0.8",
     "redux-thunk": "2.4.1",
-    "sass": "^1.54.5",
+    "sass": "1.54.5",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "2.0.4",
     "web-vitals": "2.1.3"
