--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,10 @@
 [build.environment]
     CI="FALSE"
     NODE_OPTIONS = "--max_old_space_size=4096"
-    REACT_APP__MadToken_CONTRACT_ADDRESS="0x5b09a0371c1da44a8e24d36bf5deb1141a84d875"
-    REACT_APP__AToken_CONTRACT_ADDRESS="0x4426F1939966427C436c565a4532e41028c60301"
-    REACT_APP__PublicStaking_CONTRACT_ADDRESS="0x0F27E1c790d776CE13eF852623E2Bc6AcE1b9d4B"
-    REACT_APP__Factory_CONTRACT_ADDRESS="0x0b1F9c2b7bED6Db83295c7B5158E3806d67eC5bc"
-    REACT_APP__ENV="0x0b1F9c2b7bED6Db83295c7B5158E3806d67eC5bc"
+    REACT_APP__ENV="STAGING"
     REACT_APP__ETHEREUM_ENDPOINT_LOCAL="http://localhost:8545"
     REACT_APP__ETHEREUM_ENDPOINT_STAGING="https://hh.staging.alice.net"
     REACT_APP__ETHEREUM_ENDPOINT_PRODUCTION="https://eth.alice.net"
+    REACT_APP__AToken_CONTRACT_ADDRESS="0x19B1C5d5C0CC03aADBC3C3A5aB8d0ABA34AeD0Fc"
+    REACT_APP__PublicStaking_CONTRACT_ADDRESS="0x0F27E1c790d776CE13eF852623E2Bc6AcE1b9d4B"
+    REACT_APP__Factory_CONTRACT_ADDRESS="0x0b1F9c2b7bED6Db83295c7B5158E3806d67eC5bc"
