--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,4 @@
     REACT_APP__AToken_CONTRACT_ADDRESS="0x9621718Cc892cA6fF1FC18c5a63c7DDB41f955df"
     REACT_APP__PublicStaking_CONTRACT_ADDRESS="0x093d8C519a20f3943A15EdE0200937Ef7d3f7806"
     REACT_APP__Factory_CONTRACT_ADDRESS="0x77D7c620E3d913AA78a71acffA006fc1Ae178b66"
+    REACT_APP__Lockup_CONTRACT_ADDRESS="0x0"
