--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build.environment]
     CI="FALSE"
     NODE_OPTIONS = "--max_old_space_size=4096"
-    REACT_APP__ENV="STAGING"
+    REACT_APP__ENV="PRODUCTION"
     REACT_APP__ISPRODLIVE="FALSE"
     REACT_APP__ETHEREUM_ENDPOINT_LOCAL="http://localhost:8545"
     REACT_APP__ETHEREUM_ENDPOINT_STAGING="https://hh.staging.alice.net"
